@@ -2,33 +2,34 @@
 //
 //////////////////////////////////////////////////////////////////////
 
-#if !defined(AFX_FILTERX_H__5FA01275_2213_11D3_B449_00105A5C2417__INCLUDED_)
-#define AFX_FILTERX_H__5FA01275_2213_11D3_B449_00105A5C2417__INCLUDED_
+#ifndef __FILTER_X_H
+#define __FILTER_X_H
 
 #if _MSC_VER >= 1000
 #pragma once
-#endif // _MSC_VER >= 1000
+#endif
 
 #include <stdio.h>
 
-class FilterX  
+class FilterX
 {
 public:
+  FilterX (FILE * filein, FILE * fileout);
+  virtual ~FilterX ();
 
-	const char* GetWordBreak();
-	virtual bool GetNextToken(char *token, bool *thaiFlag)=0;
-	virtual void Print(char *token, bool thaiFlag)=0;
-	FilterX(FILE *filein, FILE *fileout);
-	virtual ~FilterX();
+  const char *GetWordBreak ();
+
+  virtual bool GetNextToken (char *token, bool * thaiFlag) = 0;
+  virtual void Print (char *token, bool thaiFlag) = 0;
 
 protected:
-	char chbuff; //character buff
-	FILE *fpin;
-	FILE *fpout;
-	const char *wordBreakStr;
+  char chbuff;
+  FILE *fpin;
+  FILE *fpout;
+  const char *wordBreakStr;
 
 private:
-	bool fileopen;
+  bool fileopen;
 };
 
-#endif // !defined(AFX_FILTERX_H__5FA01275_2213_11D3_B449_00105A5C2417__INCLUDED_)
+#endif
